--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#id_contact">contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#id_contact-form">sign up</a>
+            <a class="nav-link" href="#">sign up</a>
           </li>
         </ul>
       </nav>
